# Int-code-computer

./: .gitignore  Cargo.toml  power.txt
icc/: Cargo.toml
icc/src/: instructions.rs  interpreter.rs  lib.rs
icc_assembler/: Cargo.toml
icc_assembler/src/: lib.rs  main.rs
src/: intcode.rs  lib.rs  main.rs
test_assembly/: fibonacci  fibonacci.icc
