[package]
name = "int_code_computer"
version = "0.1.0"
edition = "2018"
default-run = "main"

[dependencies]
icc = { path = "icc" }
regex = "1.5"
clap = "~2.33.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "icc_assembler"
path = "icc_assembler/src/main.rs"

[workspace]
members = [
	"icc",
	"icc_assembler"
]